--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,15 +4,71 @@
 #
 #    pip-compile requirements.dev.in
 #
+cfgv==3.3.1
+    # via pre-commit
+click==8.1.3
+    # via
+    #   mkdocs
+    #   typer
+distlib==0.3.6
+    # via virtualenv
 exceptiongroup==1.1.1
     # via pytest
+filelock==3.12.0
+    # via virtualenv
+ghp-import==2.1.0
+    # via mkdocs
+identify==2.5.24
+    # via pre-commit
 iniconfig==2.0.0
     # via pytest
+jinja2==3.1.2
+    # via mkdocs
+lazydocs==0.4.8
+    # via -r requirements.dev.in
+markdown==3.3.7
+    # via mkdocs
+markupsafe==2.1.2
+    # via jinja2
+mergedeep==1.3.4
+    # via mkdocs
+mkdocs==1.4.3
+    # via -r requirements.dev.in
+nodeenv==1.7.0
+    # via pre-commit
 packaging==23.1
-    # via pytest
+    # via
+    #   mkdocs
+    #   pytest
+platformdirs==3.5.0
+    # via virtualenv
 pluggy==1.0.0
     # via pytest
+pre-commit==3.3.1
+    # via -r requirements.dev.in
 pytest==7.3.1
     # via -r requirements.dev.in
+python-dateutil==2.8.2
+    # via ghp-import
+pyyaml==6.0
+    # via
+    #   mkdocs
+    #   pre-commit
+    #   pyyaml-env-tag
+pyyaml-env-tag==0.1
+    # via mkdocs
+six==1.16.0
+    # via python-dateutil
 tomli==2.0.1
     # via pytest
+typer==0.9.0
+    # via lazydocs
+typing-extensions==4.5.0
+    # via typer
+virtualenv==20.23.0
+    # via pre-commit
+watchdog==3.0.0
+    # via mkdocs
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
