--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,6 +22,6 @@ jobs:
           python-version: 3.x
       - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.dev.txt
           python -m pip install -e .
       - run: pre-commit run --verbose --all-files
