--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.dev.in
 #
+bracex==2.3.post1
+    # via wcmatch
 cfgv==3.3.1
     # via pre-commit
 click==8.1.3
@@ -33,7 +35,13 @@ markupsafe==2.1.2
 mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.4.3
+    # via
+    #   -r requirements.dev.in
+    #   mkdocs-awesome-pages-plugin
+mkdocs-awesome-pages-plugin==2.9.0
     # via -r requirements.dev.in
+natsort==8.3.1
+    # via mkdocs-awesome-pages-plugin
 nodeenv==1.7.0
     # via pre-commit
 packaging==23.1
@@ -69,6 +77,8 @@ virtualenv==20.23.0
     # via pre-commit
 watchdog==3.0.0
     # via mkdocs
+wcmatch==8.4.1
+    # via mkdocs-awesome-pages-plugin
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
