--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.dev.in
 #
+astroid==2.15.4
+    # via pylint
 bracex==2.3.post1
     # via wcmatch
 cfgv==3.3.1
@@ -12,6 +14,8 @@ click==8.1.3
     # via
     #   mkdocs
     #   typer
+dill==0.3.6
+    # via pylint
 distlib==0.3.6
     # via virtualenv
 exceptiongroup==1.1.1
@@ -24,14 +28,20 @@ identify==2.5.24
     # via pre-commit
 iniconfig==2.0.0
     # via pytest
+isort==5.12.0
+    # via pylint
 jinja2==3.1.2
     # via mkdocs
+lazy-object-proxy==1.9.0
+    # via astroid
 lazydocs==0.4.8
     # via -r requirements.dev.in
 markdown==3.3.7
     # via mkdocs
 markupsafe==2.1.2
     # via jinja2
+mccabe==0.7.0
+    # via pylint
 mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.4.3
@@ -40,6 +50,10 @@ mkdocs==1.4.3
     #   mkdocs-awesome-pages-plugin
 mkdocs-awesome-pages-plugin==2.9.0
     # via -r requirements.dev.in
+mypy==1.2.0
+    # via -r requirements.dev.in
+mypy-extensions==1.0.0
+    # via mypy
 natsort==8.3.1
     # via mkdocs-awesome-pages-plugin
 nodeenv==1.7.0
@@ -49,12 +63,16 @@ packaging==23.1
     #   mkdocs
     #   pytest
 platformdirs==3.5.0
-    # via virtualenv
+    # via
+    #   pylint
+    #   virtualenv
 pluggy==1.0.0
     # via pytest
 pre-commit==3.3.1
     # via -r requirements.dev.in
 pydocstyle==6.3.0
+    # via -r requirements.dev.in
+pylint==2.17.4
     # via -r requirements.dev.in
 pytest==7.3.1
     # via -r requirements.dev.in
@@ -72,17 +90,27 @@ six==1.16.0
 snowballstemmer==2.2.0
     # via pydocstyle
 tomli==2.0.1
-    # via pytest
+    # via
+    #   mypy
+    #   pylint
+    #   pytest
+tomlkit==0.11.8
+    # via pylint
 typer==0.9.0
     # via lazydocs
 typing-extensions==4.5.0
-    # via typer
+    # via
+    #   astroid
+    #   mypy
+    #   typer
 virtualenv==20.23.0
     # via pre-commit
 watchdog==3.0.0
     # via mkdocs
 wcmatch==8.4.1
     # via mkdocs-awesome-pages-plugin
+wrapt==1.15.0
+    # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
