--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,27 +4,29 @@
 #
 #    pip-compile requirements.dev.in
 #
-astroid==2.15.4
+astroid==2.15.6
     # via pylint
 bracex==2.3.post1
     # via wcmatch
 cfgv==3.3.1
     # via pre-commit
-click==8.1.3
+click==8.1.6
     # via
     #   mkdocs
     #   typer
-dill==0.3.6
+coverage[toml]==7.2.7
+    # via pytest-cov
+dill==0.3.7
     # via pylint
-distlib==0.3.6
+distlib==0.3.7
     # via virtualenv
-exceptiongroup==1.1.1
+exceptiongroup==1.1.2
     # via pytest
-filelock==3.12.0
+filelock==3.12.2
     # via virtualenv
 ghp-import==2.1.0
     # via mkdocs
-identify==2.5.24
+identify==2.5.26
     # via pre-commit
 iniconfig==2.0.0
     # via pytest
@@ -36,49 +38,58 @@ lazy-object-proxy==1.9.0
     # via astroid
 lazydocs==0.4.8
     # via -r requirements.dev.in
-markdown==3.3.7
+markdown==3.4.4
     # via mkdocs
-markupsafe==2.1.2
-    # via jinja2
+markupsafe==2.1.3
+    # via
+    #   jinja2
+    #   mkdocs
 mccabe==0.7.0
     # via pylint
 mergedeep==1.3.4
     # via mkdocs
-mkdocs==1.4.3
+mkdocs==1.5.0
     # via
     #   -r requirements.dev.in
     #   mkdocs-awesome-pages-plugin
-mkdocs-awesome-pages-plugin==2.9.0
+mkdocs-awesome-pages-plugin==2.9.1
     # via -r requirements.dev.in
-mypy==1.2.0
+mypy==1.4.1
     # via -r requirements.dev.in
 mypy-extensions==1.0.0
     # via mypy
-natsort==8.3.1
+natsort==8.4.0
     # via mkdocs-awesome-pages-plugin
-nodeenv==1.7.0
+nodeenv==1.8.0
     # via pre-commit
 packaging==23.1
     # via
     #   mkdocs
     #   pytest
-platformdirs==3.5.0
+pathspec==0.11.1
+    # via mkdocs
+platformdirs==3.9.1
     # via
+    #   mkdocs
     #   pylint
     #   virtualenv
-pluggy==1.0.0
+pluggy==1.2.0
     # via pytest
-pre-commit==3.3.1
+pre-commit==3.3.3
     # via -r requirements.dev.in
 pydocstyle==6.3.0
     # via -r requirements.dev.in
-pylint==2.17.4
+pylint==2.17.5
     # via -r requirements.dev.in
-pytest==7.3.1
+pytest==7.4.0
+    # via
+    #   -r requirements.dev.in
+    #   pytest-cov
+pytest-cov==4.1.0
     # via -r requirements.dev.in
 python-dateutil==2.8.2
     # via ghp-import
-pyyaml==6.0
+pyyaml==6.0.1
     # via
     #   mkdocs
     #   pre-commit
@@ -91,6 +102,7 @@ snowballstemmer==2.2.0
     # via pydocstyle
 tomli==2.0.1
     # via
+    #   coverage
     #   mypy
     #   pylint
     #   pytest
@@ -98,12 +110,12 @@ tomlkit==0.11.8
     # via pylint
 typer==0.9.0
     # via lazydocs
-typing-extensions==4.5.0
+typing-extensions==4.7.1
     # via
     #   astroid
     #   mypy
     #   typer
-virtualenv==20.23.0
+virtualenv==20.24.2
     # via pre-commit
 watchdog==3.0.0
     # via mkdocs
