--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,4 +24,4 @@ jobs:
           pip install -r requirements.dev.txt
           python -m pip install -e .
       - run: ./scripts/build-docs.sh
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force -f docs/mkdocs-deploy.yml
