--- a/docs/mkdocs-en.yml
+++ b/docs/mkdocs-en.yml
@@ -29,8 +29,11 @@ theme:
 extra:
   alternate:
     - name: English
-      link: /en/
+      link: /ellipsize/en/
       lang: en
     - name: Russian
-      link: /ru/
+      link: /ellipsize/ru/
       lang: ru
+
+not_in_nav: |
+   /ellipsize/ru/
