--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
         with:
           python-version: 3.11
@@ -25,6 +25,8 @@ jobs:
           python -m pip install -e .
       - run: ./scripts/build-docs.sh
       - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m “mkdocs”
           git push origin gh-pages
