--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -28,10 +28,14 @@ dill==0.3.7
     # via pylint
 distlib==0.3.7
     # via virtualenv
+editables==0.5
+    # via hatchling
 filelock==3.13.1
     # via virtualenv
 ghp-import==2.1.0
     # via mkdocs
+hatchling==1.18.0
+    # via -r requirements.dev.in
 identify==2.5.31
     # via pre-commit
 idna==3.4
@@ -65,7 +69,7 @@ mkdocs==1.5.3
     #   mkdocs-material
 mkdocs-awesome-pages-plugin==2.9.2
     # via -r requirements.dev.in
-mkdocs-material==9.4.7
+mkdocs-material==9.4.8
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3
     # via mkdocs-material
@@ -79,19 +83,24 @@ nodeenv==1.8.0
     # via pre-commit
 packaging==23.2
     # via
+    #   hatchling
     #   mkdocs
     #   pytest
 paginate==0.5.6
     # via mkdocs-material
 pathspec==0.11.2
-    # via mkdocs
+    # via
+    #   hatchling
+    #   mkdocs
 platformdirs==3.11.0
     # via
     #   mkdocs
     #   pylint
     #   virtualenv
 pluggy==1.3.0
-    # via pytest
+    # via
+    #   hatchling
+    #   pytest
 pre-commit==3.5.0
     # via -r requirements.dev.in
 pydocstyle==6.3.0
@@ -101,7 +110,9 @@ pygments==2.16.1
 pylint==3.0.2
     # via -r requirements.dev.in
 pymdown-extensions==10.3.1
-    # via mkdocs-material
+    # via
+    #   -r requirements.dev.in
+    #   mkdocs-material
 pytest==7.4.3
     # via
     #   -r requirements.dev.in
@@ -126,8 +137,12 @@ six==1.16.0
     # via python-dateutil
 snowballstemmer==2.2.0
     # via pydocstyle
+toml==0.10.2
+    # via -r requirements.dev.in
 tomlkit==0.12.2
     # via pylint
+trove-classifiers==2023.11.7
+    # via hatchling
 typer==0.9.0
     # via lazydocs
 typing-extensions==4.8.0
