--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,3 +1,4 @@
+
 # build docs from docstrings and markdown-file in folder docs
 # publish them as github pages
 #
@@ -12,18 +13,23 @@ on:
     branches:
       - main
       - master
+
+permissions:
+  contents: write
+
 jobs:
   deploy:
+    env:
+      PRIMARY_PYTHON_VERSION: '3.12'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PRIMARY_PYTHON_VERSION  }}
       - run: |
-          pip install -r requirements.dev.txt
-          pip install ghp-import
-          python -m pip install -e .
+          pip install uv
+          uv pip install ghp-import -r requirements.dev.txt --python=${{ env.PRIMARY_PYTHON_VERSION }}
       - run: ./scripts/build-docs.sh
       - run: |
           ghp-import --no-jekyll --push --force site
