--- a/.github/workflows/pip_publish.yml
+++ b/.github/workflows/pip_publish.yml
@@ -1,3 +1,4 @@
+
 # This workflows will upload a Python Package when a version tag is pushed using build system from pyproject.toml
 # To publish new version use `scripts/verup.sh`
 # Put you pypi credentials (PYPI_USERNAME, PYPI_PASSWORD) into the github repository secrets
@@ -9,13 +10,17 @@ on:
     tags:
       - 'v*.*.*'
 
+permissions:
+  contents: write
+
 jobs:
   publish:
-
+    env:
+      PRIMARY_PYTHON_VERSION: '3.12'
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set version var
       run: |
@@ -23,14 +28,14 @@ jobs:
         echo $RELEASE_VERSION
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
 
     - name: Install build dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install build
+        python -m pip install --upgrade pip uv
+        uv pip install build --python=${{ env.PRIMARY_PYTHON_VERSION }}
 
     - name: Build package
       run: |
@@ -38,11 +43,11 @@ jobs:
 
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
-      uses: pypa/gh-action-pypi-publish@v1.4.2
+      uses: pypa/gh-action-pypi-publish@v1.8.14
       with:
         user: ${{ secrets.PYPI_USERNAME }}
         password: ${{ secrets.PYPI_PASSWORD }}
-        packages_dir: dist
+        packages-dir: dist
 
     - name: Create Release
       id: create_release
