--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,5 +68,6 @@ repos:
           "--namespace-packages",
           "--explicit-package-bases"
         ]
+        require_serial: true
         language: system
         types: [ python ]
