--- a/.github/workflows/pip_publish.yml
+++ b/.github/workflows/pip_publish.yml
@@ -32,14 +32,13 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Install uv environment
+      uses: andgineer/uv-venv@v3
     - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip uv
-        uv pip install build --python=${{ env.PRIMARY_PYTHON_VERSION }}
+      run: uv pip install build --python=${{ env.PRIMARY_PYTHON_VERSION }}
 
     - name: Build package
-      run: |
-        python -m build
+      run: python -m build
 
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
