--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: trailing-whitespace
         exclude_types: [ python ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.8
+    rev: v0.14.9
     hooks:
       - id: ruff
         exclude: ^tests/
@@ -56,18 +56,14 @@ repos:
         args: [
           --line-length=100
         ]
-  - repo: local
+  - repo: https://github.com/facebook/pyrefly-pre-commit
+    rev: 0.45.2
     hooks:
-      - id: mypy
-        name: mypy
-        entry: mypy
-        args: [
-          "--install-types",
-          "--non-interactive",
-          "--ignore-missing-imports",
-          "--namespace-packages",
-          "--explicit-package-bases"
-        ]
-        require_serial: true
+      - id: pyrefly-check
+        name: pyrefly check
         language: system
-        types: [ python ]
+        args: [
+#          "--ignore=missing-import",
+#          "--ignore=missing-source-for-stubs",
+          "--project-excludes=tests"
+        ]
