--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -89,10 +89,6 @@ mkdocstrings==0.24.1
     #   mkdocstrings-python
 mkdocstrings-python==1.9.0
     # via mkdocstrings
-mypy==1.6.1
-    # via -r requirements.dev.in
-mypy-extensions==1.0.0
-    # via mypy
 natsort==8.4.0
     # via mkdocs-awesome-pages-plugin
 nodeenv==1.8.0
@@ -131,6 +127,8 @@ pymdown-extensions==10.3.1
     #   -r requirements.dev.in
     #   mkdocs-material
     #   mkdocstrings
+pyrefly==0.45.2
+    # via -r requirements.dev.in
 pytest==7.4.3
     # via
     #   -r requirements.dev.in
@@ -165,8 +163,6 @@ tomlkit==0.12.2
     # via pylint
 trove-classifiers==2023.11.7
     # via hatchling
-typing-extensions==4.8.0
-    # via mypy
 urllib3==2.0.7
     # via requests
 virtualenv==20.24.6
